# snort3-snort3

./: CMakeLists.txt  ChangeLog.md
cmake/: FindDAQ.cmake  FindML.cmake  create_pkg_config.cmake
doc/reference/: snort_reference.text
doc/upgrade/: snort_upgrade.text
doc/user/: CMakeLists.txt  extractor.txt  http_inspect.txt  opcua.txt  snort_user.text
lua/: snort.lua  snort_defaults.lua
src/: main.cc
src/actions/: act_react.cc  actions_module.cc  actions_module.h
src/control/: control.cc  control.h  control_mgmt.cc
src/decompress/: file_olefile.cc  file_olefile.h
src/detection/: detection_continuation.h  detection_engine.cc  fp_create.cc  regex_offload.cc
src/file_api/: file_cache.cc  file_cache.h  file_capture.cc  file_flows.cc  file_lib.cc  file_lib.h
src/filters/: rate_filter.cc  rate_filter.h  sfrf.cc  sfrf.h  sfthd.cc  sfthd.h
src/flow/: CMakeLists.txt  dump_flows.cc  dump_flows.h  dump_flows_descriptor.h  dump_flows_serializer.cc  dump_flows_serializer.h  flow.cc  flow_cache.cc  flow_cache.h  flow_control.cc  flow_control.h  ha.cc  prune_stats.h  stream_flow.h
src/flow/test/: CMakeLists.txt  flow_cache_test.cc  flow_control_test.cc  flow_stubs.h
src/framework/: module.cc  mp_data_bus.cc  mp_data_bus.h
src/hash/: fnv.h  hashes.cc
src/helpers/: ring.h
src/host_tracker/: host_cache_module.cc  host_tracker.cc
src/ips_options/: ips_byte_extract.cc  ips_byte_math.cc  ips_pcre.cc
src/js_norm/: js_tokenizer.l
src/log/: batched_logger.cc  batched_logger.h  messages.cc  messages.h  unified2.h
src/loggers/: alert_json.cc  alert_talos.cc  unified2.cc
src/service_inspectors/opcua/: CMakeLists.txt  dev_notes.txt  ips_opcua_msg_service.cc  ips_opcua_msg_type.cc  ips_opcua_node_id.cc  ips_opcua_node_namespace_index.cc  opcua.cc  opcua_decode.cc  opcua_decode.h  opcua_module.cc  opcua_module.h  opcua_msg_service.h  opcua_session.h  opcua_splitter.cc  opcua_splitter.h
src/service_inspectors/opcua/test/: CMakeLists.txt  ips_opcua_mock.h  ips_opcua_msg_service_test.cc  ips_opcua_msg_type_test.cc  ips_opcua_node_id_test.cc  ips_opcua_node_namespace_index_test.cc  opcua_decode_test.cc  opcua_mock.h  opcua_splitter_test.cc
src/service_inspectors/ssh/: CMakeLists.txt  ssh.cc  ssh.h  ssh_types.h
tools/: CMakeLists.txt
tools/show_flows/: CMakeLists.txt  README.show_flows  show_flows.cc
(+309 files in other folders)
